--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,8 @@ appcompat = "1.7.0"
 material = "1.12.0"
 activity = "1.8.0"
 constraintlayout = "2.1.4"
-
+retrofit="2.9.0"
+okhttp="4.4.0"
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -19,8 +20,14 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+retrofit = {group = "com.squareup.retrofit2", name="retrofit", version.ref="retrofit"}
+retrofit-scalars = {group = "com.squareup.retrofit2", name="converter-scalars", version.ref="retrofit"}
+retrofit-gson = {group = "com.squareup.retrofit2", name="converter-gson", version.ref="retrofit"}
+okhttp = {group = "com.squareup.okhttp3", name="okhttp", version.ref="okhttp"}
+okhttp-log = {group = "com.squareup.okhttp3", name="logging-interceptor", version.ref="okhttp"}
+gson = {group = "com.google.code.gson", name="gson", version="2.10.1"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
+androidLibrary = { id = "com.android.library", version.ref = "agp" }
